# bike-tft

./: .gitignore  AGENTS.md  README.md  download_kaggle_dataset.py  extract_csv_field_metadata.py  preprocess_citibike.py  pyproject.toml  requirements.txt  train_tft.py
thesis/code_results_upload_bundle_v1/: FILE_LIST.txt  README.md  pyproject.toml
thesis/code_results_upload_bundle_v1/paper/attachments/: proposal_report.md
thesis/code_results_upload_bundle_v1/paper/final/: main_thesis_word_v15_manifest.json
thesis/code_results_upload_bundle_v1/paper/source/main_thesis_v15/: thesis_draft.md
thesis/code_results_upload_bundle_v1/results/: model_benchmark_results.md
thesis/code_results_upload_bundle_v1/results/omitted_large_artifacts/: large_files_not_included.tsv
thesis/code_results_upload_bundle_v1/src/: build_main_thesis_word.js
thesis/code_results_upload_bundle_v1/src/dataset/preprocessing/: extract_csv_field_metadata.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/: paper_repro_common.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc/: README.md  __init__.py  data.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc_gwnet_adaptive_v1/: __init__.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc_gwnet_time_netloss_v1/: README.md  model.py  train.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc_gwnet_v1/: README.md  __init__.py  export_forecasts.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc_objective_v1/: train.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc_objective_v2/: __init__.py  train.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc_relational_topk_v1/: README.md  __init__.py
thesis/code_results_upload_bundle_v1/src/forecasting_models/agcrn_nyc_relational_v1/: README.md  (+1 more)
(+560 files in other folders)
