[project]
name = "bike-tft"
version = "0.1.0"
description = "Minimal Citi Bike station-level forecasting pipeline with Temporal Fusion Transformer."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "lightning",
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "pytorch-forecasting",
    "scikit-learn",
    "torch",
]
