[project]
name = "bike-tft"
version = "0.1.0"
description = "Minimal Citi Bike station-level forecasting pipeline with Temporal Fusion Transformer."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kaggle>=2.0.0",
    "lightning",
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "pytorch-forecasting",
    "scikit-learn",
    "torch",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".venv",
    "__pycache__",
    "data",
]

[tool.pyright]
include = [
    "experiments",
    "scripts",
]
exclude = [
    ".venv",
    "__pycache__",
    "data",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
